--- a/app/src/main/res/menu/opciones_toolbar_catalogos.xml
+++ b/app/src/main/res/menu/opciones_toolbar_catalogos.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/opcion_nuevo"
+    <item
+        android:id="@+id/opcion_nuevo"
         android:icon="@drawable/ic_add"
         android:orderInCategory="100"
-        app:showAsAction="ifRoom"
-        android:title="Nuevo" />
+        android:title="Nuevo"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/opcion_filtrar"
+        android:icon="@drawable/icono_buscar"
+        android:title="Buscar"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
