--- a/app/src/main/res/menu/opciones_toolbar_catalogos.xml
+++ b/app/src/main/res/menu/opciones_toolbar_catalogos.xml
@@ -9,9 +9,17 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/opcion_actualizar"
+        android:icon="@drawable/ic_actualizar"
+        android:orderInCategory="200"
+        android:title="Nuevo"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/opcion_filtrar"
         android:icon="@drawable/icono_buscar"
         android:title="Buscar"
+        android:orderInCategory="300"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
