--- a/app/src/main/res/layout/item_pieza.xml
+++ b/app/src/main/res/layout/item_pieza.xml
@@ -30,7 +30,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="left"
                     android:paddingLeft="10dp"
-                    android:text="1 - Consulta General"
+                    android:text="1 - Diente de Leche"
                     android:textColor="@color/Blanco"
                     android:textSize="20sp"
                     android:breakStrategy="simple"
@@ -83,7 +83,7 @@
         </LinearLayout>
 
         <View
-            android:id="@+id/separadorServicio"
+            android:id="@+id/separadorPieza"
             android:layout_width="wrap_content"
             android:layout_height="4dp"
             android:background="@color/FondoSecundario" />
