--- a/app/src/main/res/layout/fragment_piezas.xml
+++ b/app/src/main/res/layout/fragment_piezas.xml
@@ -12,7 +12,7 @@
         layout="@layout/toolbar" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/grabarServicio"
+        android:id="@+id/grabarPieza"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -38,49 +38,49 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Descripcion"
+                android:hint="Nombre"
                 app:counterEnabled="true"
                 app:errorEnabled="true"
-                app:counterMaxLength="100">
+                app:counterMaxLength="65">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/descripcionServicio"
+                    android:id="@+id/nombrePieza"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:maxLength="100"
+                    android:maxLength="65"
                     android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Monto"
+                android:hint="Numero"
                 app:errorEnabled="true"
                 app:counterEnabled="true"
                 app:counterMaxLength="10">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/montoServicio"
+                    android:id="@+id/numeroPieza"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="numberDecimal"
+                    android:inputType="number"
                     android:maxLength="10"
                     android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <TextView
-                android:id="@+id/tituloEstadoServicio"
+                android:id="@+id/tituloEstadoPieza"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="4dp"
-                android:text="Estado del Servicio:"
+                android:text="Estado de la Pieza:"
                 android:textSize="18dp"
                 android:textColor="@color/Blanco"
                 android:layout_marginTop="10dp"/>
 
             <RadioGroup
-                android:id="@+id/estado_servicio"
+                android:id="@+id/estado_Pieza"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -89,7 +89,7 @@
                 android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/trueServicio"
+                    android:id="@+id/truePieza"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -101,7 +101,7 @@
                     android:layout_height="match_parent"/>
 
                 <RadioButton
-                    android:id="@+id/falseServicio"
+                    android:id="@+id/falsePieza"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
