Catalogo Cuentas - Listado 2

--- a/app/src/main/res/layout/fragment_listado_cuentas.xml
+++ b/app/src/main/res/layout/fragment_listado_cuentas.xml
@@ -3,12 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/FondoSecundario"
     tools:context=".Rutas.Catalogos.Cuentas.ListadoCuentas">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listado_cuentas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginTop="65dp"
+        android:scrollbars="vertical"
+        />
 
 </FrameLayout>
