--- a/app/src/main/res/layout/item_cuentas.xml
+++ b/app/src/main/res/layout/item_cuentas.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/FondoSecundario2">
 
     <LinearLayout
@@ -37,7 +37,7 @@
             </LinearLayout>
 
             <ImageButton
-                android:id="@+id/accionesPieza"
+                android:id="@+id/accionesCuenta"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="10"
@@ -49,7 +49,7 @@
         </LinearLayout>
 
         <View
-            android:id="@+id/separadorPieza"
+            android:id="@+id/separadorCuenta"
             android:layout_width="wrap_content"
             android:layout_height="4dp"
             android:background="@color/FondoSecundario" />
