--- a/app/src/main/res/layout/fragment_pacientes.xml
+++ b/app/src/main/res/layout/fragment_pacientes.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Rutas.Catalogos.Pacientes.Pacientes"
-    android:background="@color/FondoTerciario">
+    android:background="@color/FondoTerciario"
+    tools:context=".Rutas.Catalogos.Pacientes.Pacientes">
 
     <include
         android:id="@+id/toolbar"
@@ -17,34 +17,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="65dp"
-        android:layout_marginEnd="10dp"
-        android:elevation="10dp"
         android:clickable="true"
-        app:fab_labelStyle="@style/fondoetiqueta"
+        android:elevation="10dp"
         app:fab_addButtonColorNormal="@color/AzulOscuro"
         app:fab_addButtonColorPressed="@color/FondoSecundario"
-        >
+        app:fab_labelStyle="@style/fondoetiqueta">
+
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/agregar_dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:fab_icon="@drawable/icono_agregar"
             app:fabSize="normal"
             app:fab_colorNormal="@color/FondoSecundario"
             app:fab_colorPressed="@color/AzulOscuro"
-            app:fab_title="Agregar"/>
+            app:fab_icon="@drawable/icono_agregar"
+            app:fab_title="Agregar" />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/buscar_dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:fab_icon="@drawable/icono_buscar"
             app:fabSize="normal"
             app:fab_colorNormal="@color/FondoSecundario"
             app:fab_colorPressed="@color/AzulOscuro"
-            app:fab_title="Buscar"/>
+            app:fab_icon="@drawable/icono_buscar"
+            app:fab_title="Buscar" />
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
@@ -57,10 +57,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="60dp">
+            android:layout_marginTop="60dp"
+            android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/nombreLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -72,43 +73,44 @@
                     android:inputType="textPersonName" />
             </android.support.design.widget.TextInputLayout>
 
-<!--            <android.support.design.widget.TextInputLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent">-->
+            <!--            <android.support.design.widget.TextInputLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent">-->
 
-<!--                <android.support.design.widget.TextInputEditText-->
-<!--                    android:id="@+id/segundoNombre"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:hint="Segundo Nombre"-->
-<!--                    android:inputType="textPersonName" />-->
-<!--            </android.support.design.widget.TextInputLayout>-->
+            <!--                <android.support.design.widget.TextInputEditText-->
+            <!--                    android:id="@+id/segundoNombre"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:hint="Segundo Nombre"-->
+            <!--                    android:inputType="textPersonName" />-->
+            <!--            </android.support.design.widget.TextInputLayout>-->
 
-<!--            <android.support.design.widget.TextInputLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent">-->
+            <!--            <android.support.design.widget.TextInputLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent">-->
 
-<!--                <android.support.design.widget.TextInputEditText-->
-<!--                    android:id="@+id/primerApellido"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:hint="Primer Apellido"-->
-<!--                    android:inputType="textPersonName" />-->
-<!--            </android.support.design.widget.TextInputLayout>-->
+            <!--                <android.support.design.widget.TextInputEditText-->
+            <!--                    android:id="@+id/primerApellido"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:hint="Primer Apellido"-->
+            <!--                    android:inputType="textPersonName" />-->
+            <!--            </android.support.design.widget.TextInputLayout>-->
 
-<!--            <android.support.design.widget.TextInputLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent">-->
+            <!--            <android.support.design.widget.TextInputLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent">-->
 
-<!--                <android.support.design.widget.TextInputEditText-->
-<!--                    android:id="@+id/segundoApellido"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:hint="Segundo Apellido"-->
-<!--                    android:inputType="textPersonName" />-->
-<!--            </android.support.design.widget.TextInputLayout>-->
+            <!--                <android.support.design.widget.TextInputEditText-->
+            <!--                    android:id="@+id/segundoApellido"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:hint="Segundo Apellido"-->
+            <!--                    android:inputType="textPersonName" />-->
+            <!--            </android.support.design.widget.TextInputLayout>-->
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/telefonoLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -121,6 +123,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/ocupacionLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -133,6 +136,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/edadLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -144,9 +148,23 @@
                     android:inputType="number" />
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/dpiLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/dpi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="DPI"
+                    android:inputType="number" />
+            </android.support.design.widget.TextInputLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
@@ -160,10 +178,11 @@
                     android:src="@drawable/icono_citas" />
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/fechaLayout"
                     android:layout_width="402dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:layout_marginLeft="10dp">
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="0.5">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/fecha_persona"
@@ -178,16 +197,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
                 <RadioGroup
                     android:id="@+id/sexo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center"
-                    android:gravity="center">
+                    android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/masculino"
