--- a/app/src/main/res/layout/fragment_pacientes.xml
+++ b/app/src/main/res/layout/fragment_pacientes.xml
@@ -69,7 +69,7 @@
                     android:id="@+id/primerNombre"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Nombre Completo"
+                    android:hint="Nombre"
                     android:inputType="textPersonName" />
             </android.support.design.widget.TextInputLayout>
 
