--- a/app/src/main/res/layout/fragment_pacientes.xml
+++ b/app/src/main/res/layout/fragment_pacientes.xml
@@ -5,48 +5,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/FondoTerciario"
+    android:background="@color/FondoSecundario"
     tools:context=".Rutas.Catalogos.Pacientes.Pacientes">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-<!--    <com.getbase.floatingactionbutton.FloatingActionsMenu-->
-<!--        android:id="@+id/menuDP"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="bottom|end"-->
-<!--        android:layout_marginEnd="10dp"-->
-<!--        android:layout_marginRight="10dp"-->
-<!--        android:layout_marginBottom="65dp"-->
-<!--        android:clickable="true"-->
-<!--        android:elevation="10dp"-->
-<!--        app:fab_addButtonColorNormal="@color/AzulOscuro"-->
-<!--        app:fab_addButtonColorPressed="@color/FondoSecundario"-->
-<!--        app:fab_labelStyle="@style/fondoetiqueta">-->
+    <!--    <com.getbase.floatingactionbutton.FloatingActionsMenu-->
+    <!--        android:id="@+id/menuDP"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="bottom|end"-->
+    <!--        android:layout_marginEnd="10dp"-->
+    <!--        android:layout_marginRight="10dp"-->
+    <!--        android:layout_marginBottom="65dp"-->
+    <!--        android:clickable="true"-->
+    <!--        android:elevation="10dp"-->
+    <!--        app:fab_addButtonColorNormal="@color/AzulOscuro"-->
+    <!--        app:fab_addButtonColorPressed="@color/FondoSecundario"-->
+    <!--        app:fab_labelStyle="@style/fondoetiqueta">-->
 
-<!--        <com.getbase.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/agregar_dp"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:fabSize="normal"-->
-<!--            app:fab_colorNormal="@color/FondoSecundario"-->
-<!--            app:fab_colorPressed="@color/AzulOscuro"-->
-<!--            app:fab_icon="@drawable/icono_agregar"-->
-<!--            app:fab_title="Agregar" />-->
+    <!--        <com.getbase.floatingactionbutton.FloatingActionButton-->
+    <!--            android:id="@+id/agregar_dp"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            app:fabSize="normal"-->
+    <!--            app:fab_colorNormal="@color/FondoSecundario"-->
+    <!--            app:fab_colorPressed="@color/AzulOscuro"-->
+    <!--            app:fab_icon="@drawable/icono_agregar"-->
+    <!--            app:fab_title="Agregar" />-->
 
-<!--        <com.getbase.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/buscar_dp"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:fabSize="normal"-->
-<!--            app:fab_colorNormal="@color/FondoSecundario"-->
-<!--            app:fab_colorPressed="@color/AzulOscuro"-->
-<!--            app:fab_icon="@drawable/icono_buscar"-->
-<!--            app:fab_title="Buscar" />-->
+    <!--        <com.getbase.floatingactionbutton.FloatingActionButton-->
+    <!--            android:id="@+id/buscar_dp"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            app:fabSize="normal"-->
+    <!--            app:fab_colorNormal="@color/FondoSecundario"-->
+    <!--            app:fab_colorPressed="@color/AzulOscuro"-->
+    <!--            app:fab_icon="@drawable/icono_buscar"-->
+    <!--            app:fab_title="Buscar" />-->
 
-<!--    </com.getbase.floatingactionbutton.FloatingActionsMenu>-->
+    <!--    </com.getbase.floatingactionbutton.FloatingActionsMenu>-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/grabarPaciente"
@@ -75,66 +75,91 @@
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/nombreLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="100"
+                app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/primerNombre"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Nombre"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:maxLength="100"
+                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/telefonoLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="10"
+                app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/telefono"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Telefono"
-                    android:inputType="phone" />
+                    android:inputType="phone"
+                    android:maxLength="10"
+                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/ocupacionLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="30"
+                app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/ocupacion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Ocupacion"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:maxLength="30"
+                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/edadLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="3"
+                app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/edad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Edad"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:maxLength="3"
+                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/dpiLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="30"
+                app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/dpi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="DPI"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:maxLength="30"
+                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
@@ -150,7 +175,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="8dp"
                     android:layout_weight="1.5"
-                    android:background="@color/FondoSecundario"
+                    android:background="@color/AzulOscuro"
                     android:src="@drawable/icono_citas" />
 
                 <android.support.design.widget.TextInputLayout
@@ -170,35 +195,85 @@
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tituloSexo"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:paddingLeft="4dp"
+                android:text="Genero del Paciente:"
+                android:textColor="@color/Blanco"
+                android:textSize="18dp" />
+
+            <RadioGroup
+                android:id="@+id/sexo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
-                <RadioGroup
-                    android:id="@+id/sexo"
+                <RadioButton
+                    android:id="@+id/masculino"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:checked="true"
+                    android:text="Masculino" />
 
-                    <RadioButton
-                        android:id="@+id/masculino"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:checked="true"
-                        android:text="Masculino" />
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent" />
 
-                    <RadioButton
-                        android:id="@+id/femenino"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Femenino" />
-                </RadioGroup>
+                <RadioButton
+                    android:id="@+id/femenino"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Femenino" />
+            </RadioGroup>
 
-            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tituloEstadoPaciente"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="4dp"
+                android:text="Estado del Paciente:"
+                android:textColor="@color/Blanco"
+                android:textSize="18dp" />
+
+            <RadioGroup
+                android:id="@+id/estadoPersona"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/pacienteTrue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:checked="true"
+                    android:text="Habilitado" />
+
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent" />
+
+                <RadioButton
+                    android:id="@+id/pacienteFalse"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Deshabilitado" />
+            </RadioGroup>
+
         </LinearLayout>
     </ScrollView>
 
