--- a/app/src/main/res/layout/fragment_consultar.xml
+++ b/app/src/main/res/layout/fragment_consultar.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/FondoTerciario"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".OpcionConsulta.Normal.Consultar">
+    tools:context=".Rutas.Catalogos.Pacientes.ListadoPacientes">
 
     <include
         android:id="@+id/toolbar"
